; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_nat464_utils.c_in6_clat46_event_callback.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_nat464_utils.c_in6_clat46_event_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kev_netevent_clat46_data = type { i32, i32, i32 }

@in6_clat46_evhdlr_ctxt = common dso_local global i32 0, align 4
@in6_clat46_event = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @in6_clat46_event_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @in6_clat46_event_callback(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.kev_netevent_clat46_data*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.kev_netevent_clat46_data*
  store %struct.kev_netevent_clat46_data* %5, %struct.kev_netevent_clat46_data** %3, align 8
  %6 = load i32, i32* @in6_clat46_event, align 4
  %7 = load %struct.kev_netevent_clat46_data*, %struct.kev_netevent_clat46_data** %3, align 8
  %8 = getelementptr inbounds %struct.kev_netevent_clat46_data, %struct.kev_netevent_clat46_data* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.kev_netevent_clat46_data*, %struct.kev_netevent_clat46_data** %3, align 8
  %11 = getelementptr inbounds %struct.kev_netevent_clat46_data, %struct.kev_netevent_clat46_data* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.kev_netevent_clat46_data*, %struct.kev_netevent_clat46_data** %3, align 8
  %14 = getelementptr inbounds %struct.kev_netevent_clat46_data, %struct.kev_netevent_clat46_data* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @EVENTHANDLER_INVOKE(i32* @in6_clat46_evhdlr_ctxt, i32 %6, i32 %9, i32 %12, i32 %15)
  ret void
}

declare dso_local i32 @EVENTHANDLER_INVOKE(i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
